Bug 8995 - Copying address into in6_addr instead of in6_addr.sin6_addr in forward_respond().
Summary: Copying address into in6_addr instead of in6_addr.sin6_addr in forward_respon...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xdm (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-12 11:53 UTC by Vickenty Fesunov
Modified: 2006-11-13 14:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch to fix the problem. (513 bytes, patch)
2006-11-12 11:54 UTC, Vickenty Fesunov
no flags Details | Splinter Review

Description Vickenty Fesunov 2006-11-12 11:53:49 UTC
It corrupts structure and prevents XDM from responding to ForwardQueries over IPv6.
Comment 1 Vickenty Fesunov 2006-11-12 11:54:36 UTC
Created attachment 7759 [details] [review]
Patch to fix the problem.
Comment 2 Alan Coopersmith 2006-11-13 14:52:07 UTC
Fix committed to xdm git, will be included in 1.1.1 - Thanks!

commit 623dacd509bd6c0c1f0c2c424933818ff34788ca
Author: Vickenty Fesunov <kent@comintern.ru>
Date:   Mon Nov 13 14:48:02 2006 -0800

    Bug 8995: Copying address into in6_addr instead of in6_addr.sin6_addr in for
    Bugzilla #8995 <https://bugs.freedesktop.org/show_bug.cgi?id=8995>
    Patch #7759 <https://bugs.freedesktop.org/attachment.cgi?id=7759>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.