Bug 8995: Copying address into in6_addr instead of in6_addr.sin6_addr in forward_respond()

Bugzilla #8995 <https://bugs.freedesktop.org/show_bug.cgi?id=8995>
Patch #7759 <https://bugs.freedesktop.org/attachment.cgi?id=7759>